<resources>
    <string name="app_name">W65</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="radiobutton_main_first">首页</string>
    <string name="radiobutton_main_love">爱心定制</string>
    <string name="radiobutton_main_family">亲情报告</string>
    <string name="radiobutton_main_mine">我</string>


    <string name="firstpager_button_heart">心率</string>
    <string name="firstpager_button_walk">行走距离</string>

    <string name="heart_text_site">久坐提醒</string>
    <string name="heart_text_birthday">生日提醒</string>
    <string name="heart_text_medicine">用药提醒</string>
    <string name="heart_text_gift">亲情礼品</string>
    <string name="heart_text_music">音乐推送</string>
    <string name="heart_text_message">电话留言</string>
    <string name="heart_text_family">亲情定制</string>

    <string name="mine_text_user">用户授权</string>
    <string name="mine_text_setting">设置</string>
    <string name="mine_text_weather">北京 晴天</string>

    <string name="login_text_welcome">XXX 欢迎您</string>
    <string name="login_text_phone">手机号码</string>
    <string name="login_text_password">登录密码</string>
    <string name="login_text_login">登录</string>
    <string name="login_text_service">客服</string>
    <string name="login_text_temppassword">临时密码</string>
    <string name="login_text_forgetpassword">忘记密码</string>

    <string name="callservice_text_call">呼叫客服</string>
    <string name="callservice_text_number">13001155263</string>
    <string name="callservice_text_cancel">Cancel</string>
    <string name="callservice_text_yes">Yes</string>

    <string name="temppassword_text_gettemp">获取临时登陆密码</string>
    <string name="temppassword_text_verify">1.验证身份</string>
    <string name="temppassword_text_temppassword">2.临时登陆密码</string>
    <string name="temppassword_text_phone">手机号码</string>
    <string name="temppassword_text_send">点击发送</string>
    <string name="temppassword_text_info">短信已经发送到您的手机%s，如果在120秒内没有收到短信，请重新获取验证码，若手机无法获取验证码，请拨打客服电话</string>
    <string name="temppassword_text_next">下一步</string>
    <string name="findpassword_text_fix">修改登陆密码</string>
    <string name="findpassword_text_getmessage">获取短信验证码</string>

    <string name="fixpassword_text_old">老密码</string>
    <string name="fixpassword_text_new">新密码</string>
    <string name="fixpassword_text_wrong">密码长度不对，请重新输入</string>
    <string name="fixpassword_text_help">需要求助，请拨打 </string>
    <string name="fixpassword_text_callservice">客服电话</string>
    <string name="fixpassword_text_commit">提交</string>

    <string name="setting_text_icon">头像</string>
    <string name="setting_text_passwordmanager">密码管理</string>
    <string name="setting_text_findloginpass">找回登录密码</string>
    <string name="setting_text_fixloginpass">修改登录密码</string>
    <string name="setting_text_grade">给我评分</string>
    <string name="setting_text_about">关于</string>
    <string name="setting_text_quit">安全退出</string>

    <string name="seticon_text_takephoto">拍一张照片</string>
    <string name="seticon_text_photo">从相册中选一张</string>

    <string name="authorization_text_register">用户授权注册</string>
    <string name="authorization_text_inquire">用户授权查询</string>
    <string name="authorization_text_prompt">授权用户到制定设备后，用户才可以查看设备信息</string>
    <string name="authorization_text_equipment">授权设备</string>
    <string name="authorization_text_equipment_h">岳父（西藏）</string>
    <string name="authorization_text_phone">用户手机号</string>
    <string name="authorization_text_phone_h">输入用户手机号</string>
    <string name="authorization_text_username">用户名称</string>
    <string name="authorization_text_username_h">输入登录用户名</string>
    <string name="authorization_text_password">登录密码</string>
    <string name="authorization_text_password_h">输入授权登录密码</string>
    <string name="authorization_text_lastdate">用户最后登录日期</string>
    <string name="authorization_text_inquire_date">授权用户最后登录时间：</string>

    <string name="accident_text_detail">我们发现@@@疑似在＃＃摔倒，根据系统记录，您已经与cccc接听了老人的求助电话。我们之后未姐听到您和老人的求助电话，如老人一切安好请点击
    下方“无需帮助”按钮</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="loading">加载中，请稍后...</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="title_activity_save_famiy_number">SaveFamiyNumber</string>
    <string name="title_activity_mine_device_detail">MineDeviceDetail</string>

    <string name="family_number_intelligent">智能魔方</string>
    <string name="title_activity_birthday_sound">BirthdaySound</string>
    <string name="birthday_remind_name">张三大爷</string>
    <string name="text_phone_message">留言</string>
    <string name="text_medicine_remind">用药提醒</string>
    <string name="title_activity_use_medicine_message">UseMedicineMessage</string>
    <string name="title_activity_use_medicine_time">UseMedicineTime</string>
</resources>
