<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorization_text_prompt"
        android:padding="10dp"
        android:textSize="15dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff">
        <View style="@style/line_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/authorization_text_equipment"
                android:layout_weight="1"/>
            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/et_equipment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/authorization_text_equipment_h"
                    android:background="@null"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/title_back"/>
            </RelativeLayout>
        </LinearLayout>
        <View style="@style/line_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">
            <TextView
                style="@style/authorization_text_left"
                android:text="@string/authorization_text_phone"/>
            <EditText
                android:id="@+id/et_phone"
                style="@style/authorization_text_right"
                android:hint="@string/authorization_text_phone_h"/>
        </LinearLayout>
        <View style="@style/line_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">
            <TextView
                style="@style/authorization_text_left"
                android:text="@string/authorization_text_username"/>
            <EditText
                android:id="@+id/et_name"
                style="@style/authorization_text_right"
                android:hint="@string/authorization_text_username_h"/>
        </LinearLayout>
        <View style="@style/line_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">
            <TextView
                style="@style/authorization_text_left"
                android:text="@string/authorization_text_password"/>
            <EditText
                android:id="@+id/et_password"
                style="@style/authorization_text_right"
                android:hint="@string/authorization_text_password_h"/>
        </LinearLayout>
        <View style="@style/line_horizontal"/>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"/>
    <Button
        android:id="@+id/button_authregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/auth_button"
        android:text="@string/authorization_text_register"/>
</LinearLayout>