<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.bluedatax.w65.chart.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.bluedatax.w65.chart.TitleLayout>
    <View
        style="@style/line_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temppassword_text_phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="111111"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#ffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixpassword_text_old"
            android:textSize="18dp"/>
        <EditText
            android:id="@+id/edittext_oldpass_fix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@null"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixpassword_text_new"
            android:textSize="18dp"/>
        <EditText
            android:id="@+id/edittext_newpass_fix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@null"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fixpassword_text_wrong"
        android:textColor="#ff0000"
        android:layout_marginLeft="5dp"
        android:padding="5dp"
        android:textSize="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixpassword_text_help"
            android:textSize="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixpassword_text_callservice"
            android:layout_marginLeft="10dp"
            android:textColor="#0000ff"
            android:textSize="14dp"/>
        </LinearLayout>
    <Button
        android:id="@+id/button_fixpass_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fixpassword_text_commit"
        android:layout_marginLeft="66dp"
        android:layout_marginRight="66dp"
        android:padding="10dp"
        android:background="@drawable/button_commit"
        android:textColor="#ff0000"/>
</LinearLayout>