<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/callservice_button"
    >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/callservice_text_call"/>
    <TextView
        android:id="@+id/text_setvice_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/callservice_text_number"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/callservice_info" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/callservice_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/callservice_text_cancel" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c0c0c0"
            android:padding="5dp"/>
        <Button
            android:id="@+id/callservice_button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/callservice_text_yes" />
    </LinearLayout>
    </LinearLayout>


</LinearLayout>