<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/framelayout_main"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"></FrameLayout>

    <View style="@style/line_horizontal" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radiobutton_firstpager"
            style="@style/radiobutton_main"
            android:button="@null"
            android:drawablePadding="3dp"
            android:padding="3dp"
            android:text="@string/radiobutton_main_first"
            android:textColor="@drawable/color_radiobutton"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radiobutton_love"
            style="@style/radiobutton_main"
            android:drawablePadding="3dp"
            android:padding="3dp"
            android:text="@string/radiobutton_main_love"
            android:textColor="@drawable/color_radiobutton"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radiobutton_family"
            style="@style/radiobutton_main"
            android:drawablePadding="3dp"
            android:padding="3dp"
            android:text="@string/radiobutton_main_family"
            android:textColor="@drawable/color_radiobutton"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radiobutton_mine"
            style="@style/radiobutton_main"
            android:drawablePadding="3dp"
            android:padding="3dp"
            android:text="@string/radiobutton_main_mine"
            android:textColor="@drawable/color_radiobutton"
            android:textSize="14sp" />
    </RadioGroup>

</LinearLayout>
